--- a/popup.css
+++ b/popup.css
@@ -5,13 +5,12 @@ body {
     margin: 0px;
     position: relative;
 }
-#images {
+#imagenes {
     width: 100%;
     height: 100%;
-}
-.loader {
     display: none;
-
+}
+#loader {
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #C73E1D; /* Blue */
     border-radius: 50%;
